hphp/hack/test/typecheck/shape/shape_field_check/shape_idx_optional_key_open_shape.php.like_types.exp
File "shape_idx_optional_key_open_shape.php", line 4, characters 15-16:
Invalid argument (Typing[4110])
File "shape_idx_optional_key_open_shape.php", line 4, characters 15-16:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shape_idx_optional_key_open_shape.php", line 3, characters 15-37:
But got dynamic because it is an unenforceable type
