hphp/hack/test/typecheck/shape/shape_field_check/shape_idx_optional_key_open_shape.php
<?hh

function test(shape(?'x' => int, ...) $s): void {
  Shapes::idx($s, 'x');
}
